--- a/LeanCloud/LeanCloud/LeftDrawerViewController.xib
+++ b/LeanCloud/LeanCloud/LeftDrawerViewController.xib
@@ -42,7 +42,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="登录轻松快递" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zDv-s6-4Gk">
-                    <rect key="frame" x="109" y="130" width="102" height="21"/>
+                    <rect key="frame" x="109" y="150" width="102" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -71,11 +71,16 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico-touxiang.png" translatesAutoresizingMaskIntoConstraints="NO" id="Wuz-zM-2k8">
-                    <rect key="frame" x="110" y="20" width="100" height="100"/>
+                    <rect key="frame" x="110" y="40" width="100" height="100"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="RFQ-Ba-P3I"/>
                         <constraint firstAttribute="width" constant="100" id="Y4o-Zp-Sab"/>
                     </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="50"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
@@ -97,11 +102,16 @@
                 <constraint firstItem="KMK-BU-aMU" firstAttribute="top" secondItem="VS4-bw-Bmi" secondAttribute="bottom" constant="10" id="Ze1-Oc-WXM"/>
                 <constraint firstItem="iWh-6B-XTd" firstAttribute="centerY" secondItem="bln-h9-vDG" secondAttribute="centerY" id="fZc-Yu-a9Q"/>
                 <constraint firstItem="bln-h9-vDG" firstAttribute="top" secondItem="uyn-rb-PoU" secondAttribute="bottom" constant="20" id="ga7-DO-cWa"/>
-                <constraint firstItem="Wuz-zM-2k8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="jnx-tH-52V"/>
+                <constraint firstItem="Wuz-zM-2k8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="40" id="jnx-tH-52V"/>
                 <constraint firstItem="IAC-HC-w9O" firstAttribute="centerY" secondItem="iy6-89-hLI" secondAttribute="centerY" id="lnH-lw-aGi"/>
                 <constraint firstAttribute="bottom" secondItem="KMK-BU-aMU" secondAttribute="bottom" constant="20" id="r6a-09-F0K"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                    <integer key="value" value="50"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
         </view>
     </objects>
     <resources>
