--- a/LeanCloud/LeanCloud/UserViewController.xib
+++ b/LeanCloud/LeanCloud/UserViewController.xib
@@ -18,18 +18,6 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico-touxiang.png" translatesAutoresizingMaskIntoConstraints="NO" id="WNZ-Gt-29B">
-                    <rect key="frame" x="110" y="84" width="100" height="100"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="100" id="g5B-7Q-Qbb"/>
-                        <constraint firstAttribute="height" constant="100" id="ry3-rv-r0z"/>
-                    </constraints>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="50"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                </imageView>
                 <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="昵称：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qoQ-0H-9jH">
                     <rect key="frame" x="40" y="214" width="180" height="21"/>
                     <constraints>
@@ -59,7 +47,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AKS-kz-JWl">
-                    <rect key="frame" x="230" y="210" width="30" height="30"/>
+                    <rect key="frame" x="220" y="210" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="30" id="QoP-lK-ki5"/>
                         <constraint firstAttribute="height" constant="30" id="Vcq-1S-UBP"/>
@@ -69,6 +57,18 @@
                         <action selector="changeNameAction:" destination="-1" eventType="touchUpInside" id="lTX-mE-tgf"/>
                     </connections>
                 </button>
+                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico-touxiang.png" translatesAutoresizingMaskIntoConstraints="NO" id="WNZ-Gt-29B">
+                    <rect key="frame" x="110" y="84" width="100" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="g5B-7Q-Qbb"/>
+                        <constraint firstAttribute="height" constant="100" id="ry3-rv-r0z"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="50"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -81,7 +81,7 @@
                 <constraint firstAttribute="trailing" secondItem="qs7-t1-Rwi" secondAttribute="trailing" constant="40" id="aQZ-bf-Wol"/>
                 <constraint firstItem="WNZ-Gt-29B" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="84" id="bTE-qL-dQk"/>
                 <constraint firstItem="WNZ-Gt-29B" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="cUo-jT-3lL"/>
-                <constraint firstItem="AKS-kz-JWl" firstAttribute="leading" secondItem="qoQ-0H-9jH" secondAttribute="trailing" constant="10" id="daw-Us-hxc"/>
+                <constraint firstItem="AKS-kz-JWl" firstAttribute="leading" secondItem="qoQ-0H-9jH" secondAttribute="trailing" id="daw-Us-hxc"/>
                 <constraint firstItem="qs7-t1-Rwi" firstAttribute="top" secondItem="qoQ-0H-9jH" secondAttribute="bottom" constant="30" id="dmA-3Y-9vF"/>
                 <constraint firstItem="qoQ-0H-9jH" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="e3M-7s-Uqz"/>
                 <constraint firstAttribute="trailing" secondItem="qoQ-0H-9jH" secondAttribute="trailing" constant="100" id="q1I-G6-p3o"/>
