--- a/LeanCloud/LeanCloud/InitialPageViewController.xib
+++ b/LeanCloud/LeanCloud/InitialPageViewController.xib
@@ -21,6 +21,12 @@
                     <state key="normal" title="点击进入">
                         <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="5"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="clipsToBounds" value="YES"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="changeRootVC:" destination="-1" eventType="touchUpInside" id="B9j-SX-gCY"/>
                     </connections>
